--- a/front-end/nives/style.css
+++ b/front-end/nives/style.css
@@ -26,8 +26,7 @@ body {
     margin-bottom: 13px;
 }
 .logo-header{
-    width: 150px;
-    height: 100px;
+    width: 120px;
 }
 
 /* top nav bar */
@@ -54,7 +53,7 @@ body {
 /* header */
 header{
     position: relative;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("./images/background.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("./images/pic2.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -100,7 +99,8 @@ header{
 }
 .section-title{
     color: var(--orange-color);
-    margin-bottom: 50px;
+    margin-bottom: 100px;
+    margin-top: 50px;
     text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
 }
 .section-text{
@@ -144,9 +144,9 @@ header{
     font-size: 16px;
 }
 .cohorts-section{
-    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.5);
-    padding-top: 6%;
-    padding-bottom: 40px;
+    /* box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.5); */
+    /* padding-top: 1%; */
+    padding-bottom: 20px;
     font-size: small;
     border-radius: 5px;
 }
@@ -251,13 +251,18 @@ address{
     text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
 }
 /* cohorts page */
-.cohort-intro-div, .impact-div{
+.cohort-intro-div{
     margin-top: 100px;
     margin-bottom: 100px;
 }
+.impact-div{
+    width: 95%;
+    margin: auto;
+}
+
 .cohort-paragraph{
     font-size: larger;
-    width: 70%;
+    width: 85%;
     margin: auto;
 }
 
@@ -297,6 +302,8 @@ address{
     width: 100%;
     height: 100%;
 }
+
+
 /* media queries */
 @media only screen and (max-width: 780px){
     .welcome-text{
