--- a/front-end/nives/css/d3style.css
+++ b/front-end/nives/css/d3style.css
@@ -93,3 +93,18 @@ td{
 th, td{
   border: 1px solid gray;
 }
+td.button{
+  padding: 5px 5px;
+}
+td > button{
+  padding: 5px 8px;
+  background-color: var(--orange-color);
+  color: var(--font-color);
+  border: none;
+  border-radius: 3px;
+}
+td > button:hover{
+  background-color: var(--font-color);
+  border: 1px solid var(--orange-color);
+  color: var(--orange-color);
+}
